--- a/Views/SuccessStoryEditManual.xaml
+++ b/Views/SuccessStoryEditManual.xaml
@@ -16,6 +16,7 @@
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <commonpluginsshared:LocalDateTimeConverter x:Key="LocalDateTimeConverter" />
         <controls:SetColorConverter x:Key="SetColorConverter" />
+        <commonpluginsshared:IndexConverter x:Key="IndexConverter" />
     </UserControl.Resources>
 
     <Grid Margin="10" Name="PART_GridContener">
@@ -58,25 +59,25 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <StackPanel Grid.Column="0" Visibility="{Binding IsUnlock, Converter={StaticResource BooleanToVisibilityConverter}}">
+                            <StackPanel Grid.Column="0" Visibility="{Binding ElementName=PART_CbUnlock, Path=IsChecked, Converter={StaticResource BooleanToVisibilityConverter}}">
                                 <StackPanel Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                             Visibility="{Binding IsGray, Converter={StaticResource BooleanToVisibilityConverter}}">
                                     <Image Stretch="UniformToFill"
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                                         <Image.Source>
-                                            <FormatConvertedBitmap Source="{Binding IconImageUnlocked}" DestinationFormat="Gray32Float" />
+                                            <FormatConvertedBitmap Source="{Binding ImageUnlocked}" DestinationFormat="Gray32Float" />
                                         </Image.Source>
                                         <Image.OpacityMask>
-                                            <ImageBrush ImageSource="{Binding IconImage, IsAsync=True}" />
+                                            <ImageBrush ImageSource="{Binding ImageUnlocked, IsAsync=True}" />
                                         </Image.OpacityMask>
                                     </Image>
                                     <Image Stretch="UniformToFill" 
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <Image.Source>
-                                            <FormatConvertedBitmap Source="{Binding IconImageUnlocked}" DestinationFormat="Gray32Float" />
+                                            <FormatConvertedBitmap Source="{Binding ImageUnlocked}" DestinationFormat="Gray32Float" />
                                         </Image.Source>
                                         <Image.OpacityMask>
-                                            <ImageBrush ImageSource="{Binding IconImage, IsAsync=True}" />
+                                            <ImageBrush ImageSource="{Binding ImageUnlocked, IsAsync=True}" />
                                         </Image.OpacityMask>
                                         <Image.Effect>
                                             <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}" />
@@ -86,9 +87,9 @@
 
                                 <StackPanel Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                             Visibility="{Binding IsGray, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
-                                    <Image Stretch="UniformToFill" Source="{Binding IconImageUnlocked}"
+                                    <Image Stretch="UniformToFill" Source="{Binding ImageUnlocked, IsAsync=True}"
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" />
-                                    <Image Stretch="UniformToFill" Source="{Binding IconImageUnlocked}" 
+                                    <Image Stretch="UniformToFill" Source="{Binding ImageUnlocked, IsAsync=True}"
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <Image.Effect>
                                             <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}" />
@@ -97,25 +98,25 @@
                                 </StackPanel>
                             </StackPanel>
 
-                            <StackPanel Grid.Column="0" Visibility="{Binding IsUnlock, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
+                            <StackPanel Grid.Column="0" Visibility="{Binding ElementName=PART_CbUnlock, Path=IsChecked, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                                 <StackPanel Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                             Visibility="{Binding IsGray, Converter={StaticResource BooleanToVisibilityConverter}}">
                                     <Image Stretch="UniformToFill"
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
                                         <Image.Source>
-                                            <FormatConvertedBitmap Source="{Binding IconImageLocked}" DestinationFormat="Gray32Float" />
+                                            <FormatConvertedBitmap Source="{Binding ImageLocked}" DestinationFormat="Gray32Float" />
                                         </Image.Source>
                                         <Image.OpacityMask>
-                                            <ImageBrush ImageSource="{Binding IconImage, IsAsync=True}" />
+                                            <ImageBrush ImageSource="{Binding ImageLocked, IsAsync=True}" />
                                         </Image.OpacityMask>
                                     </Image>
                                     <Image Stretch="UniformToFill" 
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <Image.Source>
-                                            <FormatConvertedBitmap Source="{Binding IconImageLocked}" DestinationFormat="Gray32Float" />
+                                            <FormatConvertedBitmap Source="{Binding ImageLocked}" DestinationFormat="Gray32Float" />
                                         </Image.Source>
                                         <Image.OpacityMask>
-                                            <ImageBrush ImageSource="{Binding IconImage, IsAsync=True}" />
+                                            <ImageBrush ImageSource="{Binding ImageLocked, IsAsync=True}" />
                                         </Image.OpacityMask>
                                         <Image.Effect>
                                             <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}" />
@@ -125,9 +126,9 @@
 
                                 <StackPanel Height="48" Width="48" VerticalAlignment="Top" Margin="0,5,0,0"
                                             Visibility="{Binding IsGray, Converter={StaticResource InvertedBooleanToVisibilityConverter}}">
-                                    <Image Stretch="UniformToFill" Source="{Binding IconImageLocked}"
+                                    <Image Stretch="UniformToFill" Source="{Binding ImageLocked, IsAsync=True}"
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" />
-                                    <Image Stretch="UniformToFill" Source="{Binding IconImageLocked}" 
+                                    <Image Stretch="UniformToFill" Source="{Binding ImageLocked, IsAsync=True}" 
                                            Visibility="{Binding EnableRaretyIndicator, Converter={StaticResource BooleanToVisibilityConverter}}">
                                         <Image.Effect>
                                             <DropShadowEffect BlurRadius="15" ShadowDepth="0" Color="{Binding Percent, Converter={StaticResource SetColorConverter}}" />
@@ -169,11 +170,12 @@
 
 
                                 <CheckBox Grid.Column="2" Grid.Row="0" Name="PART_CbUnlock"
-                                          IsChecked="{Binding IsUnlock}" Unchecked="PART_CbUnlock_Unchecked">
+                                          Tag="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Mode=OneWay, Converter={StaticResource IndexConverter}}"
+                                          IsChecked="{Binding IsUnlock, Mode=OneWay}" Click="PART_CbUnlock_Click">
                                     <Label Content="Is unlocked" />
                                 </CheckBox>
                                 <DatePicker Grid.Column="2" Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0"
-                                            SelectedDate="{Binding DateUnlock}" Width="130" Name="PART_DtUnlock"
+                                            SelectedDate="{Binding DateWhenUnlocked}" Width="130" Name="PART_DtUnlock"
                                             SelectedDateChanged="DatePicker_SelectedDateChanged" />
                             </Grid>
                         </Grid>
